part one of phase 3 code

--- a/app/src/app/util/styles.css
+++ b/app/src/app/util/styles.css
@@ -194,3 +194,71 @@
 .link-button:pressed {
     -fx-background-color: #3742b3;
 }
+
+.choice-box {
+    -fx-font-size: 16px;
+    -fx-font-family: 'Roboto', sans-serif;
+    -fx-background-color: #3b4252;
+    -fx-text-fill: white !important;
+    -fx-padding: 8 10;
+    -fx-background-radius: 8;
+    -fx-border-radius: 8;
+    -fx-border-color: #4c566a;
+    -fx-border-width: 1;
+    -fx-pref-width: 600;
+}
+
+.choice-box:hover {
+    -fx-background-color: #4c566a;
+}
+
+.choice-box:focused {
+    -fx-border-color: #5865F2;
+}
+
+.choice-box .arrow-button {
+    -fx-background-color: transparent;
+    -fx-background-radius: 8;
+}
+
+.choice-box .arrow-button .arrow {
+    -fx-background-color: #d8dee9;
+}
+
+.choice-box .list-cell {
+    -fx-background-color: #3b4252;
+    -fx-text-fill: #d8dee9;
+    -fx-padding: 8 10;
+    -fx-text-fill: white !important;
+}
+
+.choice-box .list-cell:hover {
+    -fx-background-color: #4c566a;
+}
+
+.choice-box .list-cell:selected {
+    -fx-background-color: #5865F2;
+    -fx-text-fill: white;
+}
+
+.choice-box .list-cell:selected, .choice-box .list-cell:hover {
+    -fx-text-fill: white !important;
+    -fx-background-color: #5865F2;
+}
+
+.group-cell {
+    -fx-background-color: #3b4252;
+    -fx-text-fill: #d8dee9;
+    -fx-padding: 8px;
+}
+
+.group-cell:hover {
+    -fx-background-color: #4c566a;
+}
+
+.group-cell:selected {
+    -fx-background-color: #5865F2;
+    -fx-text-fill: white;
+}
+
+
